--- a/src/Netgen/Bundle/MoreDemoBundle/Resources/sass/_typography.scss
+++ b/src/Netgen/Bundle/MoreDemoBundle/Resources/sass/_typography.scss
@@ -5,7 +5,7 @@ html {
 body {
     -webkit-font-smoothing: antialiased; // sass-lint:disable-line no-vendor-prefixes
     -moz-osx-font-smoothing: grayscale; // sass-lint:disable-line no-vendor-prefixes
-    background: $footer-bg;
+    background: $body-bg;
 }
 
 #page {
